# Residual_Copilot

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
scripts/: augment_data.py  collect_data.py  demo_side_by_side.sh  list_envs.py  play.py  train.py  train_bc.sh
scripts/exp/: make_table.py  sim_exp.py
scripts/vis/: camera_params.py  plot_data.py  to_videos.py
source/: __init__.py
source/pilot_models/: bc_pilot.py  knn_pilot.py
source/pilot_models/config/: knn_cfg.json  state_dp_cfg.json  vision_dp_cfg.json
source/utils/: constants.py  control.py  utils.py
source/xarm_assembly_env/: __init__.py  assembly_tasks_cfg.py  xarm_env.py  xarm_env_cfg.py  xarm_env_guided_diffusion.py
source/xarm_assembly_env/agents/: rl_games_ppo_cfg.yaml
